Bug 747793 - Use a ring buffer for audio buffered by nsBufferedAudioStream.  Remove generic sample copy out with volume adjustment and replace with the lightly optimized version from nsNativeAudioStream.  Add a fast path for the unity volume case.  Bump cubeb's refill thread priority on Win32.  r=cpearce